2007-09-27  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-util.c:
	Fix logic bug in error handling when creating directories
	(#481025, thanks William Lachance).

2007-09-19  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Reference the initial profile to stop crashing when profiles are
	edited (#440400, Stefan Röllin)

2007-09-17  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.20.0.

2007-09-03  Jaap Haitsma  <jaap@haitsma.org>

	* configure.in: bump gstreamer requirement to 0.10.5
	* src/sj-play.c: (select_track), (on_seek_release):
	Gstreamer bug #326311 was fixed. So we can remove work around. Fixes 
	bug #472650

2007-08-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.19.3.

2007-07-09  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata.h:
	Remove the useless construct-error code.

2007-07-09  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata.[ch]:
	* libjuicer/sj-metadata-cdtext.c:
	* libjuicer/sj-metadata-musicbrainz.c:
	* src/sj-main.c:
	Remove the useless construct-error code.

2007-07-05  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Be more paranoid when removing sources.

2007-06-22  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Translate the program description properly (#450161, Gabor Kelemen)

2007-06-21  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	Bump musicbrainz requirement, required for #393707.

2007-06-18  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	2.19.2.

2007-06-18  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Don't allow NULL track titles (#435964).

2007-06-18  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Correctly lookup the album artist (#393707).

2007-06-15  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	* src/sj-extracting.c:
	Set the label manually to force atk to update. Very sick but it