@@ -1,3 +1,10 @@
+2007-10-08  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	* src/sj-extracting.c:
+	Only lock the drive when we're about to extract, and ensure its
+	unlocked when finished. (#484535).
+
 2007-09-27  Ross Burton  <ross@burtonini.com>
 
 	* libjuicer/sj-util.c:
